# alert2040

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  http.c  main.c
config/: FreeRTOSConfig.h  alert2040.h  lwipopts.h
